--- a/Market/Views/Home/Create.cshtml
+++ b/Market/Views/Home/Create.cshtml
@@ -8,6 +8,7 @@
 <form enctype="multipart/form-data" asp-controller="home" asp-action="create"
       method="post" class="mt-3">
 
+    <!-- Name field -->
     <div class="form-group row">
         <label asp-for="Name" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
@@ -18,6 +19,7 @@
 
     <br />
 
+    <!-- Price field -->
     <div class="form-group row">
         <label asp-for="Price" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
@@ -28,17 +30,18 @@
 
     <br />
 
+    <!-- Phone number field -->
     <div class="form-group row">
         <label asp-for="Namber" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
-            <input asp-for="Namber" class="form-control" placeholder="Phone Namber">
+            <input asp-for="Namber" class="form-control" placeholder="Phone Number">
             <span asp-validation-for="Namber" class="text-danger"></span>
         </div>
     </div>
 
-
     <br />
 
+    <!-- Product type selection -->
     <div class="form-group row">
         <label asp-for="productType" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
@@ -52,6 +55,7 @@
 
     <br />
 
+    <!-- File upload for photo -->
     <div class="form-group row">
         <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
@@ -63,14 +67,17 @@
 
     <br />
 
+    <!-- Validation summary -->
     <div asp-validation-summary="All" class="text-danger"></div>
 
+    <!-- Submit button -->
     <div class="form-group row">
         <div class="col-sm-10">
             <button type="submit" class="btn btn-primary">Create</button>
         </div>
     </div>
-
+       
+    <!-- Script for handling file input display -->
     @section Scripts {
         <script>
             $(document).ready(function () {
