--- a/Market/Views/Home/Details.cshtml
+++ b/Market/Views/Home/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Product Details";
+    // Determine the path for the product's photo, using a default image if none is provided
     var photoPath = Url.Content("~/images/" + (Model.Product.PhotoPath ?? "noimage.jpg"));
 }
 
@@ -12,18 +13,20 @@
                 <h2 class="h4 mb-0">@Model.Product.Name</h2>
             </div>
             <div class="card-body text-center">
+                <!-- Display product image -->
                 <img src="@photoPath" class="card-img-top rounded mb-3" alt="@Model.Product.Name" style="max-height: 300px; width: auto; object-fit: cover;">
 
                 <div class="my-4">
+                    <!-- Display product details -->
                     <h5 class="card-text">Product ID: <span class="font-weight-normal">@Model.Product.Id</span></h5>
                     <h5 class="card-text">Price: <span class="font-weight-normal">$@Model.Product.Price.ToString("F2")</span></h5>
-                    <h5 class="card-text">Phone Namber: <span class="font-weight-normal">@Model.Product.Namber</span></h5>
+                    <h5 class="card-text">Phone Number: <span class="font-weight-normal">@Model.Product.Namber</span></h5>
                     <h5 class="card-text">Product Type: <span class="font-weight-normal">@Model.Product.productType</span></h5>
                 </div>
             </div>
             <div class="card-footer text-center">
+                <!-- Link to return to the home page -->
                 <a asp-controller="home" asp-action="index" class="btn btn-secondary m-1">Back</a>
-
             </div>
         </div>
     </div>
