--- a/Market/Views/Home/Edit.cshtml
+++ b/Market/Views/Home/Edit.cshtml
@@ -3,12 +3,12 @@
 @{
     ViewBag.Title = "Edit Product";
 
+    // Determine the path for the existing product photo
     var photoPath = "~/images/" + Model.ExistingPhotoPath;
 }
 
 <form asp-controller="home" asp-action="edit" enctype="multipart/form-data" method="post" class="mt-3">
-    <div asp-validation-summary="All" class="text-danger">
-    </div>
+    <div asp-validation-summary="All" class="text-danger"></div>
 
     <input hidden asp-for="Id" />
     <input hidden asp-for="ExistingPhotoPath" />
@@ -69,6 +69,7 @@
     <br />
 
     <div class="form-group row col-sm-4 offset-4">
+        <!-- Display existing product photo -->
         <img class="imageThumbnail" src="@photoPath" asp-append-version="true" />
     </div>
 
@@ -81,6 +82,7 @@
 
     @section Scripts {
         <script>
+            // Script to update the custom file input label with the selected file's name
             $(document).ready(function () {
                 $('.custom-file-input').on("change", function () {
                     var fileName = $(this).val().split("\\").pop();
